create a new target and adapt the code to mac

--- a/Shared/Localizable.xcstrings
+++ b/Shared/Localizable.xcstrings
@@ -202,6 +202,9 @@
         }
       }
     },
+    "Hello, world!" : {
+
+    },
     "Hi, welcome to Greetings!" : {
       "localizations" : {
         "ar" : {
